<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stock Information</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_activity_start">Stock Information</string>
    <string name="start_application_login">Starting application...</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="change_org">Change organisation</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_join">Join</string>
    <string name="alert_dialog_create">Create</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="no_org">You have no organisations yet in your account. Do you want to create or join one? </string>
    <string name="organisiation_name">Organisation name</string>
    <string name="create_org">Create a new organisation</string>
    <string name="cancel_will_close">Cancelling this action will close the application.</string>


    <!-- Status texts -->
    <string name="starting">Starting...</string>
    <string name="logging_in">Logging into the server</string>
    <string name="logged_in">Logged in</string>
    <string name="received_userdata">Received userdata</string>
    <string name="token_expired">Token expired, getting new login token</string>
    <string name="no_orgs_yet">No organisations found</string>
    <string name="one_org_starting">Organisation found, starting application</string>
    <string name="more_orgs_choose">More then one organisation found, please choose one</string>
    <string name="action_new_product">new product</string>
    <string name="menuitem_refresh">refresh</string>

    <!-- -->
    <string name="no_products_yet">There are no products yet for this organisation. Do you want to create a new product?</string>
    <string name="create_product">Create new product</string>
    <string name="update_product">Update product</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="product_order_nr">Product order number</string>
    <string name="product_ean">Product barcode</string>
    <string name="product_stock_unit">Product stock unit</string>
    <string name="product_order_unit">Product order unit</string>
    <string name="product_min_stock">Minimal stock amount</string>
    <string name="product_max_stock">Maximum stock amount</string>
</resources>
