<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/dialog_text"
                android:text="@string/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_name" />

            <TextView
                android:id="@+id/dialog_text"
                android:text="@string/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_description" />

            <TextView
                android:id="@+id/dialog_text"
                android:text="@string/product_order_nr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_order_nr" />

            <TextView
                android:id="@+id/dialog_text"
                android:text="@string/product_ean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_ean" />

            <TextView
                android:id="@+id/dialog_text"
                android:text="@string/product_stock_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_stock_unit" />

            <TextView
                android:id="@+id/dialog_text"
                android:text="@string/product_order_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_order_unit" />

            <TextView
                android:id="@+id/dialog_text"
                android:text="@string/product_min_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_min_stock" />

            <TextView
                android:id="@+id/dialog_text"
                android:text="@string/product_max_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_max_stock" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancel"
                    android:text="@string/alert_dialog_cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/ok"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/alert_dialog_ok" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>